--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.0.2",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
